[#22] Fixed padding for grave text on small screens.

--- a/static/css/osga_style.css
+++ b/static/css/osga_style.css
@@ -347,7 +347,7 @@ header .navbar-brand
 
 .grave_text td
 {
-	padding-left: 6%;
+	padding-left: 4%;
 	padding-right: 2%;
 }
 
